Add currently reading widget

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
 
           {% if site.twitter_username %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            <a href="https://twitter.com/nathan_k?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @nathan_k</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </li>
           {% endif %}
         </ul>
